# KeepLiveService

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README-en.md  README-ja.md  README-ko.md  README-zh-Hant.md  README-zh.md  README.md  SECURITY.md  gradle.properties  kill_alive.sh  llms-full.txt  llms.txt  settings.gradle.kts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android-build.yml
app/: build.gradle.kts
app/src/androidTest/java/com/google/services/: FwStartInstrumentedTest.kt
app/src/debug/: AndroidManifest.xml
app/src/debug/java/com/google/services/: TestStartActivity.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/google/services/: ExternalActivity.kt  ExternalActivityLaunchTester.kt  FwApiFullVerifier.kt  MainActivity.kt  MyApp.kt
app/src/main/res/values/: themes.xml
framework/: build.gradle.kts
framework/src/androidTest/java/com/service/framework/rust/: FwRustNativeInstrumentedTest.kt
framework/src/main/: AndroidManifest.xml
framework/src/main/cpp/: CMakeLists.txt  fw_force_stop.cpp  fw_jni.cpp  fw_jni_protect.h  fw_jni_register.h  fw_native.exports
framework/src/main/cpp/mediaroute/: CMakeLists.txt  fw_mediaroute.exports  fw_mediaroute_jni.cpp
framework/src/main/cpp/start/: fw_start_api.cpp  fw_start_api.h  fw_start_binder.cpp  fw_start_context.cpp  fw_start_jni.cpp  fw_start_jni_cache.cpp  fw_start_jni_cache.h  fw_start_media_button.cpp  fw_start_next_matching.cpp  fw_start_pending_intent.cpp  fw_start_result.h  fw_start_shell.cpp  fw_start_start_for_result.cpp  fw_start_system_ui.cpp  fw_start_virtual_display.cpp
framework/src/main/java/com/service/framework/: Fw.kt
framework/src/main/java/com/service/framework/account/: FwSyncAdapter.kt
framework/src/main/java/com/service/framework/core/: AggressiveLevel.kt  FwConfig.kt
framework/src/main/java/com/service/framework/health/: FwHealthMonitor.kt  FwStrategyHealth.kt  FwStrategyStateManager.kt
framework/src/main/java/com/service/framework/mediaroute/: FwMediaActivity.kt  FwMediaRoute2ProviderService.kt  FwMediaRouteManager.kt  FwMediaRouteNative.kt  FwMediaRouteProvider.kt  FwMediaRouteProviderService.kt
framework/src/main/java/com/service/framework/native/: FwNative.kt
framework/src/main/java/com/service/framework/observer/: ContentObserverManager.kt  FileObserverManager.kt
framework/src/main/java/com/service/framework/rust/: FwRustMediaRouteNative.kt  FwRustNative.kt
framework/src/main/java/com/service/framework/service/: DaemonService.kt  FwForegroundService.kt
framework/src/main/java/com/service/framework/start/: FwStart.kt  FwStartResult.kt  FwStartStrategy.kt
framework/src/main/java/com/service/framework/strategy/: AlarmStrategy.kt  FwCallStyleManager.kt  FwCompanionService.kt  FwDeviceAdminReceiver.kt  FwDeviceAdminService.kt  FwDreamService.kt  FwJobService.kt  FwMediaBrowserService.kt  FwTileService.kt  FwVpnService.kt  FwWidgetProvider.kt  FwWorker.kt  MediaSessionNotificationManager.kt  ProcessPriorityManager.kt  SilentAudioStrategy.kt
framework/src/main/java/com/service/framework/util/: FwLog.kt  RestartProtection.kt  ServiceStarter.kt
framework/src/main/res/drawable/: ic_tile_shield.xml
framework/src/main/res/layout/: fw_widget_layout.xml
framework/src/main/res/xml/: widget_info.xml
framework/src/main/rust/fw_rust/: Cargo.toml
framework/src/main/rust/fw_rust/src/: lib.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
